find_package(PythonLibs)
include_directories(${PYTHON_INCLUDE_PATH})
set_source_files_properties(libpc.i PROPERTIES CPLUSPLUS ON)
swig_add_module(libpc_py python libpc.i)
swig_link_libraries(libpc_py ${PYTHON_LIBRARIES})
set_source_files_properties(${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "-I../include")
set_target_properties(${SWIG_MODULE_libpc_py_REAL_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ".")
set_target_properties(${SWIG_MODULE_libpc_py_REAL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ".")
set_target_properties(${SWIG_MODULE_libpc_py_REAL_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ".")