find_package(PythonLibs)
include_directories(${PYTHON_INCLUDE_PATH})
set_source_files_properties(pdal.i PROPERTIES CPLUSPLUS ON)
swig_add_module(pdal_py python pdal.i)
swig_link_libraries(pdal_py ${PYTHON_LIBRARIES})
set_source_files_properties(${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "-I../include")
set_target_properties(${SWIG_MODULE_pdal_py_REAL_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ".")
set_target_properties(${SWIG_MODULE_pdal_py_REAL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ".")
set_target_properties(${SWIG_MODULE_pdal_py_REAL_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ".")