if (SWIG_FOUND)
    find_package(PythonLibs 2.4)
    include_directories(${PYTHON_INCLUDE_PATH})
    include_directories("${PDAL_SOURCE_DIR}/include")
    include_directories("${PROJECT_BINARY_DIR}/include")
    set_source_files_properties(pdal.i PROPERTIES CPLUSPLUS ON)
    swig_add_module(pdal python pdal.i)
    swig_link_libraries(pdal ${PYTHON_LIBRARIES})
    set_source_files_properties(${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "-I../include")
    set_target_properties(${SWIG_MODULE_pdal_REAL_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ".")
    set_target_properties(${SWIG_MODULE_pdal_REAL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ".")
    set_target_properties(${SWIG_MODULE_pdal_REAL_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ".")
endif()
