###############################################################################
#
# test/CMakeLists.txt controls building of PDAL tests
#
# Copyright (c) 2009 Mateusz Loskot <mateusz@loskot.net>
#
###############################################################################
add_subdirectory(unit)
