###############################################################################
#
# test/CMakeLists.txt controls building of PDAL tests
#
# Copyright (c) 2009 Mateusz Loskot <mateusz@loskot.net>
#
###############################################################################

include (${PDAL_CMAKE_DIR}/test.cmake)

add_subdirectory(unit)
